fix color contrast

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ img {
   max-width: 100%;
 }
 a {
-  color: #C1856D;
+  color: #9A6A57;
 }
 .material-icons {
   display: inline-block;
